# ArthaLab

./: .gitignore  ASSUMPTION.md  CHANGELOG.md  DEVELOPMENT_ROADMAP.md  README.md  TECH_SPEC.md  pyproject.toml
configs/: wedding_mvp.yaml
docs/: ARCHITECTURE.md
mdfile/: PROJECT_SPEC.md  RESEARCH_NOTES.md
src/arthalab/: __init__.py  logging.py
src/arthalab/analytics/: __init__.py  metrics.py
src/arthalab/config/: __init__.py  loader.py
src/arthalab/data/: __init__.py  market_data.py
src/arthalab/domain/: __init__.py  models.py
src/arthalab/engines/: __init__.py  backtest.py  cashflows.py  rolling.py
src/arthalab/optimization/: __init__.py  ranking.py
src/arthalab/reporting/: __init__.py  writers.py
src/arthalab/workflows/: __init__.py  analysis.py
tests/fixtures/: market_prices.csv
tests/integration/: test_workflow.py
tests/unit/: test_backtest.py  test_config.py  test_domain.py  test_market_data.py  test_metrics.py  test_ranking.py
